# nand2tetris-suite

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cpu_sim.cpp  hdl_sim.cpp  jack_debug.cpp  line_editor.cpp  line_editor.hpp  vm_emu.cpp
core/api/: CMakeLists.txt
core/common/: CMakeLists.txt  error.hpp  types.cpp  types.hpp
core/cpu/: CMakeLists.txt  README.md  cpu.cpp  cpu.hpp  instruction.cpp  instruction.hpp  memory.cpp  memory.hpp
core/hdl/: CMakeLists.txt  hdl_builtins.cpp  hdl_builtins.hpp  hdl_chip.cpp  hdl_chip.hpp  hdl_engine.cpp  hdl_engine.hpp  hdl_parser.cpp  hdl_parser.hpp  tst_runner.cpp  tst_runner.hpp
core/jack/: CMakeLists.txt  auto_source_map.cpp  auto_source_map.hpp  jack_debugger.cpp  jack_debugger.hpp  jack_declaration_parser.cpp  jack_declaration_parser.hpp  jack_tokenizer.cpp  jack_tokenizer.hpp  object_inspector.cpp  object_inspector.hpp  source_map.cpp  source_map.hpp
core/vm/: CMakeLists.txt  README.md  vm_command.cpp  vm_command.hpp  vm_engine.cpp  vm_engine.hpp  vm_memory.cpp  vm_memory.hpp  vm_parser.cpp  vm_parser.hpp
docs/: USER_MANUAL.md
examples/: CMakeLists.txt
examples/hdl/: And.tst
tests/: CMakeLists.txt  cpu_engine_test.cpp  hdl_engine_test.cpp  jack_debugger_test.cpp  jack_parser_test.cpp  vm_engine_test.cpp
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx
web/frontend/src/components/: ControlBar.tsx  Editor.tsx  OutputTable.tsx  RegisterDisplay.tsx  ScreenCanvas.tsx  StatusBar.tsx
web/frontend/src/tabs/: CpuTab.tsx  HdlTab.tsx  JackTab.tsx  VmTab.tsx
web/frontend/src/util/: keyboard.ts
web/frontend/src/wasm/: loader.ts  types.ts
web/wasm/: CMakeLists.txt  bindings.cpp
